<resources>
    <string name="app_name">Jazire Aramesh Admin</string>
    <string name="massage_reservation">Jazire Aramesh</string>
    <string name="mobile_number">شماره تلفن</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="reset_password">رمز عبورم رو فراموش کرده‌ام!</string>
    <string name="signUp_before">قبلا ثبت‌نام کرده‌ام</string>
    <string name="welcome_to_imassage">به جزیره آرامش خوش‌اومدی</string>
    <string name="insert_number_password_to_login">برای ورود شماره تلفن و رمزعبورت رو وارد کن</string>
    <string name="i_have_account">ورود به حساب کاربری</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="man">آقا</string>
    <string name="woman">خانم</string>
    <string name="next">بعدی</string>
    <string name="confirm_password">تکرار رمز عبور</string>
    <string name="back">بازگشت</string>
    <string name="enter_verification_code">کد پیامکی به شماره‌ات ارسال شد.\n لطفا کد رو در زیر وارد کن.</string>
    <string name="verification_code">تایید کد پیامکی</string>
    <string name="sign_up">ثبت نام</string>
    <string name="hello"><b>$s</b> سلام</string>
    <string name="about_clinic">درباره کلینیک</string>
    <string name="booking">رزرو نوبت</string>
    <string name="gender">جنسیت</string>
    <string name="menu">منو</string>
    <string name="reserve">رزرو</string>


    <string name="kind_massage_1">ماساژ سر</string>
    <string name="kind_massage_2">ماساژ صورت</string>
    <string name="kind_massage_3">ماساژ گردن</string>
    <string name="kind_massage_4">ماساژ بدن</string>
    <string name="kind_massage_5">ماساژ دست</string>
    <string name="lorem_50">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای</string>
    <string name="lorem_20"> روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هد</string>
    <string name="account">حساب کاربری</string>
    <string name="reserved_time">رزرو شده‌های من</string>
    <string name="history">تاریخچه رزروها</string>
    <string name="log_out_from_account">خروج از حساب کاربری</string>
    <string name="massage_kinds">انواع ماساژ</string>
    <string name="choose_massage_kind">لطفا <b>نوع ماساژ</b> مورد نظرت رو انتخاب کن</string>
    <string name="massage_kind">انواع ماساژ</string>
    <string name="massage_package">انواع پکیج</string>
    <string name="choose_massage_package">لطفا <b>پکیج ماساژ</b> مورد نظرت رو انتخاب کن</string>
    <string name="set_date">دریافت نوبت</string>
    <string name="set_date_time">لطفا<b> زمان</b> مورد نظرت رو انتخاب کن</string>
    <string name="date">تاریخ</string>
    <string name="answer_questions">پاسخگویی به سوالات</string>
    <string name="please_answer_questions">لطفا به <b>سوالات</b> زیر بادقت پاسخ دهید</string>
    <string name="question">سوال</string>
    <string name="answer">پاسخ</string>
    <string name="go_for_register">اینجا راحت میتونی حساب‌کاربری بسازی</string>
    <string name="last_name">نام‌خانوادگی</string>
    <string name="edit_name">ویرایش نام</string>
    <string name="edit_family">ویرایش نام‌خانوادگی</string>
    <string name="profile_image">عکس پروفایل</string>
    <string name="edit">ویرایش</string>
    <string name="reservation_history">تاریخچه نوبت‌ها</string>
    <string name="my_reservation">رزروشده‌های من</string>
    <string name="choose_time">زمان انتخابی شما :</string>
    <string name="price_amount">هزینه پرداختی :</string>
    <string name="massage">ماساژ :</string>
    <string name="packagee">پکیج :</string>
    <string name="whole_price">هزینه کل :</string>
    <string name="enter_off_code">کد تخفیف داری !؟ \n این پایین کدتخفیفت رو وارد کن</string>
    <string name="off_code">کد تخفیف</string>
    <string name="set_off_code">اعمال کد تخفیف</string>
    <string name="total_price">هزینه نهایی :</string>
    <string name="tooman">تومان</string>
    <string name="payment">پرداخت</string>
    <string name="successfully_reserved">با موفقیت رزرو شد</string>
    <string name="fail_to_reserve">متاسفانه پرداخت موفق نبود</string>
    <string name="res_code">کد رهگیری :</string>
    <string name="back_to_home">بازگشت به صفحه اصلی</string>
    <string name="do_u_exit_the_app">از برنامه خارج می‌شوید !؟</string>
    <string name="next_reservation">نوبت های بعدی :</string>
    <string name="reservation">رزرو شده‌ها :</string>
    <string name="slider">اسلایدر</string>
    <string name="about_us">درباره ما</string>
    <string name="packageee">پکیج</string>
    <string name="massagee">ماساژ</string>
    <string name="users">کاربران</string>
    <string name="bills">صورتحساب‌ها</string>
    <string name="add_slide">افزودن اسلاید</string>
    <string name="insert_image">افزودن عکس</string>
    <string name="desc">متن</string>
    <string name="save">ذخیره کردن</string>
    <string name="edit_image">تغییر عکس</string>
    <string name="reserved_at">رزرو شده‌های</string>
    <string name="answers">پاسخ‌های</string>
    <string name="add_package">افزودن پکیج</string>
    <string name="package_name">نام پکیج</string>
    <string name="package_price">قیمت پکیج</string>
    <string name="package_length">زمان پکیج</string>
    <string name="select_massage">انتخاب ماساژ</string>
    <string name="description">توضیحات</string>
    <string name="add_massage">افزودن ماساژ</string>
    <string name="massage_name">نام ماساژ</string>
    <string name="price">قیمت</string>
    <string name="config_time">پیکربندی زمان</string>
    <string name="active">فعال</string>
    <string name="_00">00:00</string>
    <string name="_01">01:00</string>
    <string name="_02">02:00</string>
    <string name="_03">03:00</string>
    <string name="_04">04:00</string>
    <string name="_05">05:00</string>
    <string name="_06">06:00</string>
    <string name="_07">07:00</string>
    <string name="_08">08:00</string>
    <string name="_09">09:00</string>
    <string name="_10">10:00</string>
    <string name="_11">11:00</string>
    <string name="_12">12:00</string>
    <string name="_13">13:00</string>
    <string name="_14">14:00</string>
    <string name="_15">15:00</string>
    <string name="_16">16:00</string>
    <string name="_17">17:00</string>
    <string name="_18">18:00</string>
    <string name="_19">19:00</string>
    <string name="_20">20:00</string>
    <string name="_21">21:00</string>
    <string name="_22">22:00</string>
    <string name="_23">23:00</string>
    <string name="config_date">پیکربندی روزها</string>
    <string name="_sat">شنبه</string>
    <string name="_sun">یکشنبه</string>
    <string name="_mon">دوشنبه</string>
    <string name="_three">سه‌شنبه</string>
    <string name="_four">چهارشنبه</string>
    <string name="_five">پنج‌شنبه</string>
    <string name="_fri">جمعه</string>
    <string name="days_to_reserve">تعداد روزهای قابل رزرو</string>
    <string name="disable_days">تعداد روزهای غیرقابل قابل رزرو</string>
    <string name="questions">سوالات</string>
    <string name="add_question">افزودن سوال</string>
    <string name="offer_token">کدتخقیف</string>
    <string name="add_offer">افزودن کدتخفیف</string>
    <string name="number">تعداد</string>
    <string name="offer_percent">درصد تخفیف</string>
    <string name="password_reset">بازیابی رمزعبور</string>
    <string name="enter_mobile_number">شماره موبایل خود را وارد نمایید</string>
    <string name="reset">بازیابی</string>
    <string name="new_password">رمزعبور جدید</string>
    <string name="reservationn">رزروشده‌ها</string>
    <string name="start_date">تاریخ شروع</string>
    <string name="end_date">تاریخ پایان</string>
    <string name="help">مشاوره</string>
    <string-array name="genders">
        <item>آقا</item>
        <item>خانم</item>
    </string-array>
</resources>