<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dialog_reset_password_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:strokeWidth="@dimen/margin_1_1_2_3"
        app:strokeColor="@color/overlay_dark_40"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/width_dialog"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="@dimen/width_dialog"
                android:layout_height="@dimen/width_120_136_144_200"
                android:background="@drawable/fra_reserved_curve_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_reset"
                    android:textColor="@color/blue_50"
                    android:textSize="@dimen/text_16_18_18_28"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8_12_16_20"
                android:layout_marginEnd="@dimen/margin_12_16_16_32"
                android:text="@string/enter_mobile_number"
                android:textAppearance="@style/TextAppearance.AppCompat.TextView.bold_16"
                android:textColor="@color/black_low"
                android:textSize="@dimen/text_14_16_16_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout2" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12_16_16_32"
                android:layout_marginEnd="@dimen/margin_12_16_16_32"
                android:layout_marginTop="@dimen/margin_8_12_16_20"
                android:hint="@string/mobile_number"
                android:layoutDirection="rtl"
                app:placeholderText="915*******"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:placeholderTextAppearance="@style/TextAppearance.AppCompat.TextView.normal_16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fra_add_offer_percent"
                    style="@style/TextAppearance.AppCompat.TextView.bold_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:inputType="number"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/text_14_16_16_20" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/fra_add_question_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_12_16_16_32"
                android:layout_marginBottom="@dimen/margin_12_16_16_32"
                android:layout_marginEnd="16dp"
                android:onClick="@{onClick::onClick}"
                android:paddingVertical="@dimen/margin_8_12_16_20"
                android:text="@string/reset"
                android:textSize="@dimen/text_14_16_18_24"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout3" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>